tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_module__path_flags_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - "module::path"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::PATH_QUALIFIER_SELF
crate::module::path::*

----- stderr -----
